fix collapsing sidebar css for vesktop

--- a/.config/vesktop/settings/quickCss.css
+++ b/.config/vesktop/settings/quickCss.css
@@ -1,13 +1,13 @@
 :root:has(#thread-context, #channel-context, #guild-context, #guild-browse-channels-context-menu, #audio-device-context, #user-settings-cog, #account),
 :root:has([class^="privateChannels"]):has(#user-context),
-:root:has(:is(.sidebar_a4d4d9, .guilds_a4d4d9):is(:hover, :focus-within)) {
+:root:has(:is([class^="sidebar_"], [data-list-id="guildsnav"]):is(:hover, :focus-within)) {
     --visiblechannellist-width: 240px;
 }
-:not([i]):not([i]):not([i]) .sidebar_a4d4d9 {
+:not([i]):not([i]):not([i]) [class^="sidebar_"] {
     width: var(--visiblechannellist-width, 0) !important;
     transition: width .5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-.sidebar_a4d4d9 .container_ee69e0 {
+[class^="sidebar_"] [class^="container__"] {
     width: 240px;
 }
 
